<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.project.kicksdrop.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_wishlist"
        android:name="com.project.kicksdrop.ui.wishlist.WishlistFragment"
        android:label="@string/title_wishlist"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.project.kicksdrop.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.project.kicksdrop.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <activity
        android:id="@+id/navigation_detail"
        android:name="com.project.kicksdrop.ui.product.ProductDetail"
        android:label="Detail"
        tools:layout="@layout/activity_product_detail">
        <argument
            android:name="productId"
            android:defaultValue="@null"
            app:argType="string" />
        <deepLink
            android:id="@+id/deepLink"
            app:uri="kicksdrop.com/product/{id}" />
    </activity>
    <activity
        android:id="@+id/navigation_login"
        android:name="com.project.kicksdrop.ui.auth.LoginActivity"
        android:label="Login"
        tools:layout="@layout/activity_login" />
    <activity
        android:id="@+id/navigation_register"
        android:name="com.project.kicksdrop.ui.auth.RegisterActivity"
        android:label="Register"
        tools:layout="@layout/activity_register">

    </activity>
    <activity
        android:id="@+id/navigation_forgot_password"
        android:name="com.project.kicksdrop.ui.auth.ResetPasswordActivity"
        android:label="Forgot Password"
        tools:layout="@layout/activity_reset_password" />
</navigation>