<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.CartProductOrder">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/navigation_bar_productCart_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="22dp"
                android:baselineAligned="false">


                <EditText
                    android:id="@+id/et_productCart_search"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="14dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_radius"
                    android:drawableEnd="@drawable/ic_baseline_search_24"
                    android:hint="@string/search"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

                <ImageButton
                    android:id="@+id/ibtn_productCart_shoppingBag"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="13dp"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_shoppingbag"
                    tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

                <ImageButton
                    android:id="@+id/ibtn_productCart_message"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_message"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_horizontal"
                android:text="@string/cart"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tv_productCart_totalItemAmountOfGoods"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="2 item"
                    android:textAllCaps="true"
                    android:textColor="#444444"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center_vertical"
                    android:text="@string/separate"
                    android:textAllCaps="true"
                    android:textColor="#444444"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_productCart_moneyOfProducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="99.00$"
                    android:textAllCaps="true"
                    android:textColor="#444444"
                    android:textSize="15sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <include layout="@layout/item_cart_product_more" />

            </LinearLayout>

            <!--            Time shipping-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:paddingStart="18dp"
                android:text="@string/time_shipping"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <!--            Date-->
            <TextView
                android:id="@+id/tv_productCart_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom_line_light"
                android:fontFamily="@font/roboto_light"
                android:paddingStart="32dp"
                android:paddingBottom="20dp"
                android:text="Nov 12 - tue - Nov 16"
                android:textColor="#757575"
                android:textSize="10sp"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom_line_light"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <!--                Summary-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/summary"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <!--                do you have a promo code-->
                <Spinner
                    android:id="@+id/spinner_productCart_promoCodeDropDown"
                    android:layout_width="132dp"
                    android:layout_height="27dp"
                    android:layout_marginBottom="20dp"
                    android:minHeight="48dp"
                    android:spinnerMode="dropdown"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <!--                    Place to input promo code-->
                    <EditText
                        android:id="@+id/et_productCart_inputPromoteCode"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="11dp"
                        android:layout_weight="1"
                        android:background="@drawable/border_radius_corner_input"
                        android:hint="@string/promote_code"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

                    <!--                    Apply promo code-->
                    <Button
                        android:id="@+id/btn_productCart_apply"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/black"
                        android:text="@string/apply"
                        android:textAllCaps="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/total_amount_of_goods"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <!--                    field total amount of goods-->
                    <TextView
                        android:id="@+id/tv_productCart_totalAmountOfGoods"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:text="90.00$"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/total_shipping_fee"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <!--                    field total shipping fee goods-->
                    <TextView
                        android:id="@+id/tv_productCart_totalShippingFee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:text="9.00$"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/discount"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <!--                    field discount-->
                    <TextView
                        android:id="@+id/tv_productCart_discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:text="-15.00$"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/total"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <!--                field total-->
                <TextView
                    android:id="@+id/tv_productCart_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="84.00$"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_coner_bottom_linear_layout"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:text="Total payment:"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <!--                        field total payment-->
                        <TextView
                            android:id="@+id/tv_productCart_totalPayment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:fontFamily="@font/roboto_medium"
                            android:text="84.00$"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_productCart_order"
                        android:layout_width="155dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/black"
                        android:text="Order"
                        android:textAllCaps="true" />


                </LinearLayout>


            </LinearLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>